# template

./: .cz.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  Makefile  README.md  action.yaml  cspell.config.yaml  cspell.json  entry_point.py  go.mod  index.html  init.mk  init.yaml  mkdocs.yaml  package.json  pyproject.toml  requirements.txt
.github/: auto-merge.yaml  dependabot.yaml
.github/actions/check/: action.yaml  main.sh
.github/actions/deploy/: action.yaml
.github/actions/docs/: action.yaml
.github/actions/install/: action.yaml
.github/actions/install/scripts/: apt-install.sh  brew-install.sh  choco-install.sh
.github/actions/install/scripts/other/: install.sh  poetry.sh  task.sh
.github/actions/merge/: action.yaml  check.py  main.sh
.github/actions/pre-commit/: action.yaml  requirements.txt
.github/actions/publish/: action.yaml
.github/actions/release/: action.yaml  main.sh
.github/workflows/: ci.yaml  commitizen.yaml  gh-pages.yaml  merge.yaml  mkdocs.yaml  release.yaml  sync.yaml  template.yaml  test-install.yaml  update-license-year.yaml  update.yaml
make/: mkdocs.mk
scripts/: cspell-init.py  deploy-gh-pages.sh  docs.sh  format.sh  gh-clone-all.sh  gh-init.sh  gh-secret-set-pypi.sh  install.sh  poetry-build.sh  setup-github.sh  sort-pre-commit-config.py  sync-all.sh  template.sh
search/: search_index.json
template/cli/: __init__.py
template/cli/pre_commit/: __init__.py  __init__.pyi  ci.py  ci.pyi  update.py  update.pyi
template/cli/pre_commit_ci/: __init__.py
template/cli/sort/: __init__.py
template/cli/sort/pre_commit/: config.py  hooks.py  hooks.pyi
template/pre_commit/: config.py  config.pyi  hook.py  hook.pyi
