[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.0.0"
version_files = ["template/__init__.py:__version__", "pyproject.toml:version"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Qin Li <liblaf@outlook.com>"]
description = "Repository Template"
documentation = "https://liblaf.github.io/template/"
homepage = "https://liblaf.github.io/template/"
license = "MIT"
name = "template"
readme = "README.md"
repository = "https://github.com/liblaf/template"
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"

[tool.poetry.group.docs.dependencies]
lxml = "^4.9.2"
mkdocs = "^1.4.2"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocs-git-committers-plugin-2 = "^1.1.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-material = "^8.5.11"
